[package]
name = "hyper-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.1"
clap = { version = "4.5.16", features = ["derive"] }
http = "1.1.0"
http-body-util = "0.1.2"
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.7", features = ["http1"] }
tokio = { version = "1.38.1", features = ["full"] }
