[package]
name = "rust-sdk-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.48.0", features = ["rt-tokio"] }
clap = { version = "4.5.16", features = ["derive"] }
http = "1.1.0"
tokio = { version = "1.40.0", features = ["full"] }

